feat: add basic styling

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="./popup.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <img src="../images/icon.png" alt="AISIS to Calendar Icon" class="main__icon">
+    <h1>AISIS to Calendar</h1>
+    <button>Convert to CSV</button>
+  </main>
 </body>
 </html>
