feat: parse table for class schedules

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AISIS to Calendar</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./popup.css">
-</head>
-<body>
-  <main>
-    <img src="../images/icon.png" alt="AISIS to Calendar Icon" class="main__icon">
-    <h1>AISIS to Calendar</h1>
-    <button>Convert to CSV</button>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AISIS to Calendar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./popup.css" />
+  </head>
+  <body>
+    <main>
+      <img
+        src="../images/icon.png"
+        alt="AISIS to Calendar Icon"
+        class="main__icon"
+      />
+      <h1>AISIS to Calendar</h1>
+      <button>Convert to CSV</button>
+    </main>
+    <script src="./popup.js"></script>
+  </body>
 </html>
