feat: add ICS conversion feature

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,7 +20,8 @@
         class="main__icon"
       />
       <h1>AISIS to Calendar</h1>
-      <button>Convert to CSV</button>
+      <button id="ics">Convert to ICS</button>
+      <button id="csv">Convert to CSV</button>
     </main>
     <script src="./popup.js"></script>
   </body>
